WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15056
REGRESSION (
r21472
): Digg Podcasts Episodes Render "Digg" counter incorrectly
https://bugs.webkit.org/show_bug.cgi?id=15056
Summary
REGRESSION (r21472): Digg Podcasts Episodes Render "Digg" counter incorrectly
Neil Daniels
Reported
2007-08-22 17:29:04 PDT
This is kinda hard to explain so here is a screenshot:
http://myskitch.com/neild/digg_podcasting_episode_bug-20070822-171844/
Basically, the digg counter on any podcast's episode list becomes misaligned. It seems that it _might_ be a problem with the way that it handles CSS. It should not be pushed down like it is. This bug occurs on
r25168
, along with
r25145
; it may go further back but I haven't tested it that far, as I never noticed this before. This bug DOES NOT occur on Safari Version 3.0.3 (522.12.1).
Attachments
Reduction
(148 bytes, text/html)
2007-08-23 01:35 PDT
,
mitz
no flags
Details
Single-block test case
(120 bytes, text/html)
2007-08-23 01:54 PDT
,
mitz
no flags
Details
Don't make inner empty inlines
(11.32 KB, patch)
2007-08-24 01:59 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-08-23 01:04:59 PDT
Regressed in <
http://trac.webkit.org/projects/webkit/changeset/21472
>.
mitz
Comment 2
2007-08-23 01:35:06 PDT
Created
attachment 16091
[details]
Reduction
mitz
Comment 3
2007-08-23 01:39:25 PDT
WebKit creates an <a href="1"></a> between the <li> and the <a href="2">, whereas Firefox and html5lib don't. See also
bug 13712
(although in the case given there, html5lib agrees that the empty inline should be created).
mitz
Comment 4
2007-08-23 01:54:24 PDT
Created
attachment 16092
[details]
Single-block test case This test case demonstrates the bug in the single intermediate block case.
r21472
did not change the behavior in this case, only extended it to cases with multiple intermediate blocks.
mitz
Comment 5
2007-08-23 05:03:48 PDT
Even simpler case: <span><i>foo</span><div> </i>bar</div>
Ian 'Hixie' Hickson
Comment 6
2007-08-23 13:21:44 PDT
Whether or not to create inlines for spaces is a known bug. I want to make them not be created, but I haven't quite worked out what the spec should say.
mitz
Comment 7
2007-08-23 13:33:33 PDT
(In reply to
comment #5
)
> Even simpler case: > <span><i>foo</span><div> </i>bar</div>
OK, that was a borderline case. However WebKit also creates an empty <i> inside the div for <span><i>foo</span><div></i>bar</div> which is what this bug is about.
Ian 'Hixie' Hickson
Comment 8
2007-08-23 19:56:04 PDT
Ah yeah, for that case I don't think the inline should be created per spec. Glad to know the spec is on the side of compatibility here!
mitz
Comment 9
2007-08-24 01:59:33 PDT
Created
attachment 16106
[details]
Don't make inner empty inlines
Dave Hyatt
Comment 10
2007-08-24 15:28:52 PDT
Comment on
attachment 16106
[details]
Don't make inner empty inlines r=me
Mark Rowe (bdash)
Comment 11
2007-08-25 05:36:11 PDT
Landed in
r25236
.
Mark Rowe (bdash)
Comment 12
2007-08-25 05:36:33 PDT
<
rdar://problem/5437711
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug