2007-08-25  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15056
          REGRESSION (r21472): Digg Podcasts Episodes Render "Digg" counter incorrectly

        Covered by fast/parser/residual-style-close-across-n-blocks.html

        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::handleResidualStyleCloseTagAcrossBlocks): If the
        residual style was closed before anything else in the block (so it does
        not apply to anything inside the block) avoid creating an empty element for
        it inside the block.

2007-08-25  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - updated test and results for http://bugs.webkit.org/show_bug.cgi?id=15056
          REGRESSION (r21472): Digg Podcasts Episodes Render "Digg" counter incorrectly

        * fast/parser/residual-style-close-across-n-blocks-expected.txt:
        * fast/parser/residual-style-close-across-n-blocks.html:
        * tables/mozilla/other/wa_table_tr_align-expected.txt:


Canonical link: https://commits.webkit.org/19732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25236 268f45cc-cd09-0410-ab3c-d52691b4dbfc